# paperreader

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
skills/: GENERATION.md
skills/paperreader/: SKILL.md
src/: cli.rs  config.rs  epub.rs  formatter.rs  index.rs  interactive.rs  main.rs  pdf.rs  search.rs  toc.rs
