[package]
name = "paperreader"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
pdf_oxide = "0.3"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
